style: adjust color and size of dismiss flash message button

--- a/app/views/shared/_flash.html.erb
+++ b/app/views/shared/_flash.html.erb
@@ -14,10 +14,10 @@
           <button
             type="button"
             data-action="click->notifications#close"
-            class="-my-1.5 -mr-1.5 bg-blue-50 text-blue-600 rounded-lg focus:ring-2 focus:ring-blue-400 p-1.5 hover:bg-blue-200 inline-flex items-center justify-center size-8 dark:bg-slate-800 dark:text-blue-400 dark:hover:bg-slate-700"
+            class="-my-1.5 -mr-1.5 bg-blue-50 text-blue-600 rounded-full focus:ring-2 focus:ring-blue-400 p-2 hover:bg-blue-200 inline-flex items-center justify-center size-8 dark:bg-slate-800 dark:text-blue-400 dark:hover:bg-slate-700 transition duration-200 ease-in-out"
             aria-label="Close">
             <span class="sr-only">Close</span>
-            <%= inline_svg_tag 'icons/x-mark.svg', class: 'size-5 text-blue-600 dark:text-blue-400' %>
+            <%= inline_svg_tag 'icons/x-mark.svg', class: 'size-4 text-blue-600 dark:text-blue-400' %>
           </button>
         </p>
       </div>
@@ -35,10 +35,10 @@
           <button
             type="button"
             data-action="click->notifications#close"
-            class="-my-1.5 -mr-1.5 bg-green-50 text-green-600 rounded-lg focus:ring-2 focus:ring-green-400 p-1.5 hover:bg-green-200 inline-flex items-center justify-center size-8 dark:bg-slate-800 dark:text-green-400 dark:hover:bg-slate-700"
+            class="-my-1.5 -mr-1.5 bg-green-50 text-green-600 rounded-full focus:ring-2 focus:ring-green-400 p-2 hover:bg-green-200 inline-flex items-center justify-center size-8 dark:bg-slate-800 dark:text-green-400 dark:hover:bg-slate-700 transition duration-200 ease-in-out"
             aria-label="Close">
             <span class="sr-only">Close</span>
-            <%= inline_svg_tag 'icons/x-mark.svg', class: 'size-5 text-green-600 dark:text-green-400' %>
+            <%= inline_svg_tag 'icons/x-mark.svg', class: 'size-4 text-green-600 dark:text-green-400' %>
           </button>
         </p>
       </div>
@@ -56,10 +56,10 @@
           <button
             type="button"
             data-action="click->notifications#close"
-            class="-my-1.5 -mr-1.5 bg-red-50 text-red-600 rounded-lg focus:ring-2 focus:ring-red-400 p-1.5 hover:bg-red-200 inline-flex items-center justify-center size-8 dark:bg-slate-800 dark:text-red-400 dark:hover:bg-slate-700"
+            class="-my-1.5 -mr-1.5 bg-red-50 text-red-600 rounded-full focus:ring-2 focus:ring-red-400 p-2 hover:bg-red-200 inline-flex items-center justify-center size-8 dark:bg-slate-800 dark:text-red-400 dark:hover:bg-slate-700 transition duration-200 ease-in-out"
             aria-label="Close">
             <span class="sr-only">Close</span>
-            <%= inline_svg_tag 'icons/x-mark.svg', class: 'size-5 text-red-600 dark:text-red-400' %>
+            <%= inline_svg_tag 'icons/x-mark.svg', class: 'size-4 text-red-600 dark:text-red-400' %>
           </button>
         </p>
       </div>
@@ -77,10 +77,10 @@
           <button
             type="button"
             data-action="click->notifications#close"
-            class="-my-1.5 -mr-1.5 bg-yellow-50 text-yellow-600 rounded-lg focus:ring-2 focus:ring-yellow-400 p-1.5 hover:bg-yellow-200 inline-flex items-center justify-center size-8 dark:bg-slate-800 dark:text-yellow-400 dark:hover:bg-slate-700"
+            class="-my-1.5 -mr-1.5 bg-yellow-50 text-yellow-600 rounded-full focus:ring-2 focus:ring-yellow-400 p-2 hover:bg-yellow-200 inline-flex items-center justify-center size-8 dark:bg-slate-800 dark:text-yellow-400 dark:hover:bg-slate-700 transition duration-200 ease-in-out"
             aria-label="Close">
             <span class="sr-only">Close</span>
-            <%= inline_svg_tag 'icons/x-mark.svg', class: 'size-5 text-yellow-600 dark:text-yellow-400' %>
+            <%= inline_svg_tag 'icons/x-mark.svg', class: 'size-4 text-yellow-600 dark:text-yellow-400' %>
           </button>
         </p>
       </div>
