--- a/app/views/runs/_new_run_modal.html.erb
+++ b/app/views/runs/_new_run_modal.html.erb
@@ -11,7 +11,7 @@
   role="dialog"
   tabindex="-1"
   data-modal-target="modal"
-  class="modal opacity-0 pointer-events-none origin-bottom-right sm:origin-center"
+  class="modal opacity-0 pointer-events-none max-sm:origin-bottom-right"
 >
   <div class="flex flex-col space-y-1.5 text-center sm:text-left mb-6">
     <h2 class="text-lg font-semibold leading-none tracking-tight">New Run</h2>
