--- a/app/views/teams/member.html.erb
+++ b/app/views/teams/member.html.erb
@@ -13,13 +13,8 @@
         <div class="card">
           <p class="mb-3 text-lg font-semibold text-slate-700 dark:text-slate-300 lg:text-center">Team</p>
           <div class="flex items-center gap-4 shrink-0">
-            <% if @team.photo.attached? %>
-              <%= image_tag @team.photo.variant(resize_to_limit: [150, 150]).processed, class: 'size-20 rounded-lg drop-shadow-lg dark:drop-shadow-none object-cover' %>
-            <% else %>
-              <div class="size-20 bg-slate-200 dark:bg-slate-700 rounded-lg drop-shadow-lg dark:drop-shadow-none grid place-items-center">
-                <%= inline_svg_tag 'icons/team.svg', class: 'size-14 text-soft' %>
-              </div>
-            <% end %>
+            <%= render 'shared/team_photo', team: @team, size: :md %>
+
             <div class="flex-1">
               <p class="text-xl font-bold transition duration-300 ease-in-out group-hover:text-indigo-600 dark:group-hover:text-indigo-500"><%= @team.name %></p>
               <p class="text-soft text-sm">Coach: <%= @team.owner.default_name %></p>
@@ -33,13 +28,8 @@
         <div class="card">
           <p class="mb-3 text-lg font-semibold text-slate-700 dark:text-slate-300 lg:text-center">Member</p>
           <div class="flex items-center gap-4 shrink-0">
-            <% if @member.avatar.attached? %>
-              <%= image_tag @member.avatar.variant(resize_to_limit: [150, 150]).processed, class: 'size-20 rounded-lg drop-shadow-lg dark:drop-shadow-none object-cover' %>
-            <% else %>
-              <div class="size-20 bg-slate-200 dark:bg-slate-700 rounded-lg drop-shadow-lg dark:drop-shadow-none grid place-items-center">
-                <%= inline_svg_tag 'icons/user.svg', class: 'size-14 text-soft' %>
-              </div>
-            <% end %>
+            <%= render 'shared/user_photo', user: @member, size: :md %>
+
             <div class="flex-1">
               <p class="text-xl font-bold transition duration-300 ease-in-out group-hover:text-indigo-600 dark:group-hover:text-indigo-500">
                 <%= @member.default_name %>
