fix: team_buttons incorrectly rendering join button when user has already sent request

--- a/app/views/teams/shared/_team_buttons.html.erb
+++ b/app/views/teams/shared/_team_buttons.html.erb
@@ -17,15 +17,7 @@
 
 <% else %>
   <% if team.gender_requirement_met?(current_user) %>
-    <% if request.nil? || request.allowed? %>
-      <%= button_to 'Join team',
-                    request.nil? ? join_team_path(team) : team_join_request_path(request),
-                    method: request.nil? ? :post : :patch,
-                    data: { turbo: false },
-                    class: "btn #{'btn-sm' unless current_page_team} btn-primary btn-muted"
-      %>
-
-    <% elsif request.pending? %>
+    <% if request && request.pending? %>
       <div class="<%= 'text-center w-full space-y-2 mt-4' if current_page_team %>">
         <%= content_tag :p, 'You have requested to join this team.', class: 'text-soft text-sm' if current_page_team %>
         <%= button_to 'Cancel request',
@@ -35,6 +27,15 @@
                       class: "btn #{'btn-sm' unless current_page_team} btn-destructive btn-muted"
         %>
       </div>
+
+    <% elsif request.nil? || request.allowed? %>
+      <%= button_to 'Join team',
+                    request.nil? ? join_team_path(team) : team_join_request_path(request),
+                    method: request.nil? ? :post : :patch,
+                    data: { turbo: false },
+                    class: "btn #{'btn-sm' unless current_page_team} btn-primary btn-muted"
+      %>
+
     <% end %>
 
   <% elsif current_page_team %>
