feat: utilize :avatar_url for users signed up with google_oauth2

--- a/app/views/shared/_user_photo.html.erb
+++ b/app/views/shared/_user_photo.html.erb
@@ -50,6 +50,8 @@
 
 <% if user.avatar.attached? %>
   <%= image_tag user.avatar.variant(resize_to_limit: [px_size, px_size]).processed, class: "#{size_classes} object-cover #{image_classes}", **image_options %>
+<% elsif user.avatar_url %>
+  <%= image_tag user.avatar_url, class: "#{size_classes} object-cover #{image_classes}", **image_options %>
 <% elsif image_only %>
   <%= image_tag '', class: "#{size_classes} object-cover #{image_classes}", **image_options if current_page?(edit_user_registration_path) %>
 <% else %>
